--- a/nsprpub/configure.in
+++ b/nsprpub/configure.in
@@ -199,6 +199,119 @@ if test "$target" = "arm-android-eabi" ; then
     AC_DEFINE(ANDROID)
 fi
 
+
+# IOS parameters
+
+AC_ARG_WITH(ios-target,
+[  --with-ios-target=TARGET
+            			iPhoneOS or iPhoneSimulator],
+    ios_target=$withval)
+
+AC_ARG_WITH(ios-version,
+[  --with-ios-version=VERSION
+    					SDK version (default is 6.0)],
+    ios_sdk_version=$withval)
+
+AC_ARG_WITH(ios-min-version,
+[  --with-ios-min-version=VERSION
+                		Minimum supported version (default is 4.3)],
+    ios_min_version=$withval)
+
+AC_ARG_WITH(ios-arch,
+[  --with-ios-arch=ARCH
+                		iOS Architecture],
+    ios_arch=$withval)
+
+
+# Check whether --with-ios-version or --without-ios-version was given.
+if test "${with_ios_version+set}" = set; then
+  withval="$with_ios_version"
+  ios_sdk_version=$withval
+else
+  ios_sdk_version=6.0
+fi
+
+
+# Check whether --with-ios-min-version or --without-ios-min-version was given.
+if test "${with_ios_min_version+set}" = set; then
+  withval="$with_ios_min_version"
+  ios_deploy_version=$withval
+else
+  ios_deploy_version=4.3
+fi
+
+
+# Check whether --with-ios-arch or --without-ios-arch was given.
+if test "${with_ios_arch+set}" = set; then
+  withval="$with_ios_arch"
+  ios_arch=$withval
+fi
+
+
+case "$ios_target" in
+iPhoneOS|iPhoneSimulator)
+        if ! test -d "/Applications/Xcode.app/Contents/Developer/Platforms" ; then
+        { echo "configure: error: You must install Xcode first from the App Store" 1>&2; exit 1; }
+    fi
+
+    if test "$ios_target" == "iPhoneSimulator" ; then
+        CPU_ARCH=i386
+        ios_arch=i386
+        target_name=x86
+        target=i386-darwin
+		IOS_OPT_FLAGS=""
+    else
+        if test -z "$ios_arch" ; then
+            ios_arch=armv7
+        fi 
+        target_name=arm
+        target=arm-darwin
+		IOS_OPT_FLAGS="-mvectorize-with-neon-quad -fprefetch-loop-arrays -mfloat-abi=hard -ftree-vectorize -march=armv7-a -mfpu=vfpv3-d16"
+    	AC_DEFINE(ARM7DARWIN)
+    fi
+    target_os=darwin
+
+    xcode_base="/Applications/Xcode.app/Contents/Developer/Platforms"
+    ios_sdk_root=""
+    ios_toolchain="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin"
+
+    ios_sdk_root="$xcode_base"/$ios_target.platform/Developer/SDKs/$ios_target"$ios_sdk_version".sdk
+    if ! test -d "$ios_sdk_root" ; then
+        { echo "configure: error: Invalid SDK version" 1>&2; exit 1; }
+    fi
+
+    AS="$ios_toolchain"/as
+    CC="$ios_toolchain"/clang
+    CXX="$ios_toolchain"/clang++
+    CPP="$ios_toolchain/clang -E"
+    LD="$ios_toolchain"/ld
+    AR="$ios_toolchain"/ar
+    AS="$ios_toolchain/as -arch armv7"
+    RANLIB="$ios_toolchain"/ranlib
+    STRIP="$ios_toolchain"/strip
+    LDFLAGS="-isysroot $ios_sdk_root -arch $ios_arch -v"
+
+    CFLAGS="-isysroot $ios_sdk_root -arch $ios_arch -miphoneos-version-min=$ios_deploy_version -I$ios_sdk_root/usr/include -pipe -Wno-implicit-int -Wno-return-type -integrated-as $IOS_OPT_FLAGS"
+    CXXFLAGS="$CFLAGS"
+    CPPFLAGS=""
+
+    if test -z "$HOST_CPPFLAGS" ; then
+        HOST_CPPFLAGS=" "
+    fi
+    if test -z "$HOST_CFLAGS" ; then
+        HOST_CFLAGS=" "
+    fi
+    if test -z "$HOST_CXXFLAGS" ; then
+        HOST_CXXFLAGS=" "
+    fi
+    if test -z "$HOST_LDFLAGS" ; then
+        HOST_LDFLAGS=" "
+    fi
+
+esac
+
+
+
 dnl ========================================================
 dnl =
 dnl = Check options that may affect the compiler
@@ -500,18 +613,18 @@ if test "$target" != "$host"; then
         AC_MSG_ERROR([no acceptable cc found in \$PATH])
     fi
     AC_MSG_RESULT([$HOST_CC])
-    if test -z "$HOST_CFLAGS"; then
-        HOST_CFLAGS="$CFLAGS"
-    fi
-    if test -z "$HOST_LDFLAGS"; then
-        HOST_LDFLAGS="$LDFLAGS"
-    fi
+#    if test -z "$HOST_CFLAGS"; then
+#        HOST_CFLAGS="$CFLAGS"
+#    fi
+#    if test -z "$HOST_LDFLAGS"; then
+#        HOST_LDFLAGS="$LDFLAGS"
+#    fi
 
     CC="$HOST_CC"
     CFLAGS="$HOST_CFLAGS"
     LDFLAGS="$HOST_LDFLAGS"
 
-    AC_MSG_CHECKING([whether the $host compiler ($HOST_CC $HOST_CFLAGS $HOST_LDFLAGS) works])
+    AC_MSG_CHECKING([whether the $host host compiler ($CC $CFLAGS $LDFLAGS) works])
     AC_TRY_COMPILE([], [return(0);], 
         [ac_cv_prog_host_cc_works=1 AC_MSG_RESULT([yes])],
         AC_MSG_ERROR([installation or configuration problem: $host compiler $HOST_CC cannot create executables.]) )
@@ -534,7 +647,9 @@ if test "$target" != "$host"; then
         ;;        
     esac            
 
-    AC_CHECK_PROGS(CC, $CC "${target_alias}-gcc" "${target}-gcc", echo)
+    #AC_CHECK_PROGS(CC, $CC "${target_alias}-gcc" "${target}-gcc", echo)
+	echo "CAT: $CFLAGS"
+
     unset ac_cv_prog_CC
     AC_PROG_CC
     if test -n "$USE_CPLUS"; then
